takeout IAM role creation as Jenkins CloudFormation does not support IAM Capability pass

--- a/QUICK-LAUNCH-STACK.yaml
+++ b/QUICK-LAUNCH-STACK.yaml
@@ -15,9 +15,9 @@ Resources:
     Properties:
       TemplateURL: https://s3.amazonaws.com/adop-infra/component-vpc.yaml
       Parameters:
-        FlowLogARN: !GetAtt AdopFlowlogs.Outputs.ARNID
+        FlowLogARN: !ImportValue ARNID
       TimeoutInMinutes: '60'
-    DependsOn: AdopFlowlogs
+    # DependsOn: AdopFlowlogs
   AdopPublicNetwork:
     Type: AWS::CloudFormation::Stack
     Properties:
